Fix top spacing on image right and spacing on user dashboard buttons

--- a/web/themes/custom/citizen_dart/components/04-units/dashboard/_dashboard.scss
+++ b/web/themes/custom/citizen_dart/components/04-units/dashboard/_dashboard.scss
@@ -99,11 +99,11 @@
       }
 		}//end div
 	}//end user actions
-  .block-field-uid{
+  .block-uid{
     margin-bottom: 0;
     .action-buttons{
       a{
-        margin-right: 2rem;
+        margin-right: 1rem;
       }
     }
   }
