--- a/web/themes/custom/citizen_dart/components/04-units/nodes/_node-mixins.scss
+++ b/web/themes/custom/citizen_dart/components/04-units/nodes/_node-mixins.scss
@@ -292,7 +292,7 @@
     z-index: 1;
     @include desk{
       position: absolute;
-      top: 0;
+      top: 6px;
       right: 0;
       width: 50%;
       z-index: 2;
